# discord-2048

./: Cargo.toml  Dockerfile  README.md  cmds.json  update_commands
.github/workflows/: docker.yml
src/: main.rs
