[package]
name = "discord-2048"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
ed25519-dalek = "1.0"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
lib-2048 = { git = "https://github.com/Benricheson101/2048.git" }
once_cell = "1.15"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
twilight-model = "0.13"
